# Project-CrewAI-Regression-Pipeline-Generator

./: README.md  pyproject.toml
knowledge/: pipeline_reference_style.md
proyecto_pipeline_machine_learning_muestra/: 01-EDA.ipynb  02-Feature-Engineering.ipynb  03-Pipeline-sklearn.ipynb  04-Feature-Selection.ipynb
src/proyecto_agentes_de_pipeline_ml/: crew.py  main.py
src/proyecto_agentes_de_pipeline_ml/config/: agents.yaml  tasks.yaml
src/proyecto_agentes_de_pipeline_ml/tools/: csv_profiler_tool.py  custom_tool.py  file_reader_tool.py  notebook_writer_tool.py
