[project]
name = "proyecto_agentes_de_pipeline_ml"
version = "0.1.0"
description = "proyecto-agentes-de-pipeline-ml using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=1.12.2",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "scikit-learn>=1.3.0",
    "feature-engine>=1.6.0",
    "joblib>=1.3.0",
]

[project.scripts]
proyecto_agentes_de_pipeline_ml = "proyecto_agentes_de_pipeline_ml.main:run"
run_crew = "proyecto_agentes_de_pipeline_ml.main:run"
train = "proyecto_agentes_de_pipeline_ml.main:train"
replay = "proyecto_agentes_de_pipeline_ml.main:replay"
test = "proyecto_agentes_de_pipeline_ml.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
